04Mar23=======================================================================
1. Fixed regression caused by too many command errors in (startup) script
   files. This is caused by much stricter checking of commands entered both 
   by users AND scripts. If there more concurrent errors ie. greater than
   $DXChannel::maxerrors (default 10) then that user will be disconnected.

   Unfortunately this could include the $mycall (node) channel if there were
   too many command users in the startup script. The example I looked at had
   a load of HTML pasted into it.  
   
   For various reasons the only manifestation of this problem was that pings
   no longer worked. 

   This has been fixed. I am grateful to Fulvio HB9DHG for letting me break
   his node for an hour or so until I worked out what was going on.  
03Mar23=======================================================================
1. Fix DXDebug::DXDebug not found errors in rarely used functions. This is 
   also an interaction with differing versions of Mojolicious. Clearly this 
   has never happened to me (sigh).
2. Allow non-privileged users to use ping (no arguments) and get 'PONG nn' 
   where nn is an incrementing counter or if there is an argument it will 
   return 'PONG <argument>' - all in UPPER CASE. See help ping for more
   details. 
02Mar23=======================================================================
1. Fix sh/dx/30 problem. I.e. allow old style version of sh/dx 30.  
01Mar23=======================================================================
1. Revert PC92 A D and PC92 C record flags back to defaults.
2. Deal with users that send gibberish.
3. Fix show/425 (default) URL.
4. Improve Spot deduping.
28Feb23=======================================================================
1. Default ip addresses ON in PC92 C records, disable PC92 A D record output.
2. Add CTY-3308 prefixes.
3. Fix gen_usdb_data.pl (add missing use DXUtil), update current location of
   official FCC databases.